--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -4,7 +4,7 @@
       <div class="container">
          <div class="design">
             <div class="row">
-               <div class="col-md-12">
+               <div class="col-md-7">
                   <h1>There is always a better way to do it & <span>we find it</span> </h1>
                   <h4>- by Thomas Alva Edison +<span> uxmint</span> </h4>
                </div>
@@ -41,6 +41,9 @@
                 <li>
                   <img src="./assets/images/services/logo-5.svg" alt="Client Logo">
                 </li>
+                <li>
+                  <img src="./assets/images/services/logo9.svg" alt="Client Logo">
+                </li>
             </ul>
          </div>
          </div>
@@ -55,6 +58,9 @@
                 </li>
                 <li>
                   <img src="./assets/images/services/logo-6.svg" alt="Client Logo">
+                </li>
+                <li>
+                  <img src="./assets/images/services/logo8.svg" alt="Client Logo">
                 </li>
             </ul>
          </div>
@@ -87,7 +93,7 @@
    <div class="about-layout1">
       <div class="container">
          <div class="row">
-            <div class="col-md-5 design-layout">
+            <div class="col-md-6 design-layout">
               <div class="design-left">
                <h2>We have built & are building some great products together</h2>
                <div class="anime-button">
@@ -95,7 +101,7 @@
                </div>
              </div>
             </div>
-          <div class="col-md-7 design-layouts">
+          <div class="col-md-6 design-layouts">
                <div class="design-right">
                   <h5>Startups</h5>
                   <p>We’ve been there and we exactly know the struggles and what it takes to build a product from the scratch. We have the expertise to validate your ideas with the right process and to bring the right solutions for your target customers and ensure a successful launch.</p>
