--- a/src/app/components/career/career.component.scss
+++ b/src/app/components/career/career.component.scss
@@ -15,6 +15,7 @@
         padding: 250px 0px;
         h1{
             font-size: 76px;
+            font-weight: 100;
             color: #3B3B3B;
             font-family: "Muli", sans-serif;
             span{
@@ -23,6 +24,7 @@
         }
         h4{
             font-size: 26px;
+            font-weight: 100;
             color: #3B3B3B;
             padding-top: 25px;
             font-family: "Muli", sans-serif;
