--- a/src/app/components/engagement-models/engagement-models.component.html
+++ b/src/app/components/engagement-models/engagement-models.component.html
@@ -8,7 +8,56 @@
     </div>
  </div>
 </div>
-<div class="feature-work">
+<div class="service-layout3">
+   <div class="container">
+     <div class="row mb30">
+       <div class="col-md-5">
+         <h3>Fixed Bid</h3>
+       </div>
+       <div class="col-md-7">
+         <p>The fixed bid model suites best for projects with defined scope and defined requirement specification. The timeline and effort can be estimated based on the scope or work. Any changes or enhancements not part of the scope would be taken as part of Change Requests with separate estimates.</p>
+         <div class="li">- Clear scope definition and documented requirements</div>
+         <div class="li">- Fits for small and medium projects</div>
+         <div class="li">- No interim changes</div>
+         <div class="li">- Cost efficient for small projects with limited budget</div>  
+      </div>
+     </div>
+     <div class="row mb30">
+         <div class="col-md-5">
+           <h3>Time & Material</h3>
+         </div>
+         <div class="col-md-7">
+           <p>The time & material model are cost efficient for complex projects that are dynamic this suites best. Our team is flexible to handle changes and accommodate the product needs. The cost is billed based on the total team effort in hours involved in the project. The billing is done on monthly basis.</p>
+           <div class="li">- Highly suitable for product driven design and enterprise projects</div>
+         <div class="li">- Allows better flexibility for changing design directions</div>
+         <div class="li">- Transparent billing and full control over time and budget</div>
+         </div>
+     </div>
+     <div class="row mb30">
+       <div class="col-md-5">
+         <h3>Dedicated Team Model</h3>
+           </div>
+           <div class="col-md-7">
+             <p>Want our design team to join force with the internal business & development? We are in! This works best for long term complex and consistent projects that demand design team to understand the domain and work inline with the business team.</p>
+             <div class="li">- Skilled and experienced design team</div>
+             <div class="li">- Reduces in-house cost on hiring skilled resources</div>
+             <div class="li">- Team be scaled-up with very less notice</div>
+            </div>
+     </div>
+     <div class="row">
+       <div class="col-md-5">
+         <h3>Staff Augmentation Model</h3>
+       </div>
+       <div class="col-md-7">
+         <p>Need to leverage your existing design team? Our design experts can loop in to design along with your internal team. This work best when there is need for business to ramp up without much of time to train new hires. The billing can be done on monthly basis.</p>
+         <div class="li">- Reduces time to hire and train</div>
+         <div class="li">- Skilled and experienced designers</div>
+         <div class="li">- Reduces in-house cost on hiring full-time resources</div> 
+      </div>
+     </div>
+   </div>
+</div>
+<!-- <div class="feature-work">
    <ngu-carousel class="work-carousel" #workCarousel [inputs]="worksCarouselConfig" [dataSource]="works">
       <ngu-tile *nguCarouselDef="let item; let i = index">
          <div class="row">
@@ -55,8 +104,8 @@
             <a (click)="workCarousel.moveTo(i)" [class.active]="workCarousel.activePoint == i">&nbsp;</a>
          </li>
       </ul>
-      </ngu-carousel>
-   </div>
+   </ngu-carousel>
+   </div> -->
     <ngb-accordion [closeOthers]="true" activeIds="static-1" class="only-mobile">
       <ngb-panel id="static-1"  >  
          <ng-template ngbPanelTitle>
