--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -74,7 +74,7 @@ button{
         display: inline-block;
         margin-right: 20px;
         a{
-            color: #C3343C;
+            color: #ffffff;
             font-size: 18px;
             &:hover{
                 text-decoration: none;
