--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,8 +4,7 @@
          <h2>We design and bring</h2>
          <h1>Digital Transformation</h1>
          <p>UX Consulting. &nbsp;&nbsp;Usability Testing. &nbsp;&nbsp;User Interface Design. &nbsp;&nbsp;Front End Development.</p>
-         <lottie-player class="animations" src="https://assets8.lottiefiles.com/private_files/lf30_fr3o8i90.json"  background="transparent"  speed="1"  autoplay ></lottie-player>
-
+         <!-- <lottie-player class="animations" src="https://assets8.lottiefiles.com/private_files/lf30_fr3o8i90.json"  background="transparent"  speed="1"  autoplay ></lottie-player> -->
       </div>
    </div>
    <div class="feature-work">
@@ -94,40 +93,17 @@
 
 
     <!-- ************* SLIDER2 ***************** -->
-     <div class="slider">
+    <div class="clients">
       <div class="container">
-      <div class="slide-track">
-         <div class="slide">
-            <img src="./assets/images/home/logo2.svg" alt="Client Logo">
-         </div>
-         <div class="slide">
-            <img src="./assets/images/home/logo4.svg" alt="Client Logo">
-         </div>
-         <div class="slide">
-            <img src="./assets/images/home/logo5.svg" alt="Client Logo">
-         </div>
-         <div class="slide">
-            <img src="./assets/images/home/logo6.svg" alt="Client Logo">
-         </div>
-         <div class="slide">
-            <img src="./assets/images/home/logo3.svg" alt="Client Logo">
-         </div>
-         <div class="slide">
-            <img src="./assets/images/home/logo1.svg" alt="Client Logo">
-         </div>
-         <div class="slide">
-            <img src="./assets/images/home/logo7.svg" alt="Client Logo">
-         </div>
-         <div class="slide">
-            <img src="./assets/images/home/logo8.svg" alt="Client Logo">
-         </div>
-         <div class="slide">
-            <img src="./assets/images/home/logo9.svg" alt="Client Logo">
-         </div>
-         <div class="slide">
-            <img src="./assets/images/home/logo10.svg" alt="Client Logo">
-         </div>
-
+         <div class="row">
+            <div class="col-md-12">
+               <h2>Clients we worked</h2>
+            </div>
+          </div>
+      </div>
+      <div class="slider">
+         <div class="container">
+         <div class="slide-track">
             <div class="slide">
                <img src="./assets/images/home/logo2.svg" alt="Client Logo">
             </div>
@@ -156,10 +132,44 @@
                <img src="./assets/images/home/logo9.svg" alt="Client Logo">
             </div>
             <div class="slide">
-               <img src="./assets/images/home/logo10.svg" alt="Client Logo">    
-      </div>
-      </div>
+               <img src="./assets/images/home/logo10.svg" alt="Client Logo">
+            </div>
+   
+               <div class="slide">
+                  <img src="./assets/images/home/logo2.svg" alt="Client Logo">
+               </div>
+               <div class="slide">
+                  <img src="./assets/images/home/logo4.svg" alt="Client Logo">
+               </div>
+               <div class="slide">
+                  <img src="./assets/images/home/logo5.svg" alt="Client Logo">
+               </div>
+               <div class="slide">
+                  <img src="./assets/images/home/logo6.svg" alt="Client Logo">
+               </div>
+               <div class="slide">
+                  <img src="./assets/images/home/logo3.svg" alt="Client Logo">
+               </div>
+               <div class="slide">
+                  <img src="./assets/images/home/logo1.svg" alt="Client Logo">
+               </div>
+               <div class="slide">
+                  <img src="./assets/images/home/logo7.svg" alt="Client Logo">
+               </div>
+               <div class="slide">
+                  <img src="./assets/images/home/logo8.svg" alt="Client Logo">
+               </div>
+               <div class="slide">
+                  <img src="./assets/images/home/logo9.svg" alt="Client Logo">
+               </div>
+               <div class="slide">
+                  <img src="./assets/images/home/logo10.svg" alt="Client Logo">    
+         </div>
+         </div>
+       </div>
+       </div>
     </div>
+
    <div class="cater">
       <div class="container">
          <div class="row">
