--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -21,7 +21,7 @@
           <a class="swipe-button" routerLink="/service/user-experience">Show More</a>
         </div>
         <div class="col-md-4 service-card">
-          <h4>Visual Design</h4>
+          <h4>Interface Design</h4>
           <p>Aesthetically good design can instill <br>curiosity for the customers to move <br> beyond the landing page.Make your</p><br>
           <a class="swipe-button" routerLink="/service/interface-design">Show More</a>
         </div>
