--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
@@ -8,12 +8,12 @@
     </div>
     <div class="careerui-layout">
        <div class="container">
-          <div class="careerui-design">
+          <div class="careerui-design" *ngIf="job == 1">
              <div class="row">
                 <div class="col-md-5">
-                   <h1>UI Designer</h1>
+                   <h1>Sr Frontend Developer</h1>
                    <h6>Experience</h6>
-                   <h5>2 to 4 years</h5>
+                   <h5>3 to 6 years</h5>
                    <h6>Location</h6>
                    <h5>Chennai, India</h5>
                    <div class="button only-mobile">
@@ -23,22 +23,45 @@
                 <div class="col-md-7 description">
                    <h1>Job Description</h1>
                    <p>
-                      - Create styleguide, themes, layouts for different interfaces<br>
-                      - Work in coherence with Brand Guidelines<br>
-                      - Ability to create illustration and icons from the scratch<br>
-                      - Proficiency in Sketch, Axure, Zeplin, Adobe XD, Illustrator & Photoshop<br>
-                      - Ability to work effectively in a cross cultural environment<br> 
-                      - Experience in retail domain added advantage<br>
-                      - Ability to prioritize and manage multiple milestones and projects efficiently<br>
-                      - Strong communication skills is a must<br> 
-                      - Degree in Fine Art, Vis. Comm, Media & Studies, Product Design is<br>preferred.
+                    - Developing UI for mobile and web applications from the scratch<br>
+                    - Build reusable components and libraries for future use<br>
+                    - Accurately translate designs into functional UI<br>
+                    - Co-ordinate with business, designs and testing teams<br>
+                    - Share status on the open tasks and inform the management on any impending risks proactively<br>
+                    - Adhered to schedule and timeline
                    </p>
                    <div class="button">
-                      <div class="btn btn-white"><a href="https://www.linkedin.com/jobs/view/2803996787" target="_blank">Apply</a></div>
+                      <div class="anime-button"><a href="https://www.linkedin.com/jobs/view/3217209178/?refId=usE%2F9Hq%2BdhXjbBk9YIkuWA%3D%3D&trackingId=X3I3FSGtISnOmx25S7tWsw%3D%3D" target="_blank">Apply</a></div>
                    </div>
                 </div>
              </div>
           </div>
+          <div class="careerui-design" *ngIf="job != 1">
+            <div class="row">
+               <div class="col-md-5">
+                  <h1>Hybrid Designer</h1>
+                  <h6>Experience</h6>
+                  <h5>2 to 5 years</h5>
+                  <h6>Location</h6>
+                  <h5>Chennai, India</h5>
+                  <div class="button only-mobile">
+                     <div class="btn btn-white " routerLink="/careers"> Back</div>
+                  </div>
+               </div>
+               <div class="col-md-7 description">
+                  <h1>Job Description</h1>
+                  <p>
+                     - Create digital campaigns and layouts as per brand guidelines<br>
+                     - Edit existing UI Frameworks [basic of HTML/CSS]<br>
+                    - Work cross-functionally with other teams<br>
+                    - Multi-task while designing components of various projects<br>
+                  </p>
+                  <div class="button">
+                     <div class="anime-button"><a href="https://www.linkedin.com/jobs/view/3319069273/?refId=usE%2F9Hq%2BdhXjbBk9YIkuWA%3D%3D&trackingId=rb1FxiZMEouWwEQ6pqrMwQ%3D%3D" target="_blank">Apply</a></div>
+                  </div>
+               </div>
+            </div>
+         </div>
        </div>
     </div>
  </div>
