--- a/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.scss
+++ b/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.scss
@@ -10,6 +10,7 @@
     padding: 200px 0px;
     h1{
         font-size: 56px;
+        font-weight: 100;
         color: #3B3B3B;
         font-family: "Muli", sans-serif;
     }
@@ -104,6 +105,7 @@
     padding: 150px 0px;
     h3{
         font-size: 36px;
+        font-weight: 100;
         margin-bottom: 30px;
         font-family: "Muli", sans-serif;
     }
