--- a/src/app/modules/services/components/interface-design/interface-design.component.html
+++ b/src/app/modules/services/components/interface-design/interface-design.component.html
@@ -162,9 +162,9 @@
       <div class="row">
           <div class="col-md-6 left">
               <h2>Case Studies</h2>
-              <div class="button">
-                  <div class="btn btnn" routerLink="/works">See All Works</div>
-              </div>
+              <div class="anime-button">
+                <a routerLink="/works">See All Works</a>
+            </div>
           </div>
           <div class="col-md-6 right">
               <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="otherCaseStudies">
