--- a/src/app/modules/services/components/interface-design/interface-design.component.scss
+++ b/src/app/modules/services/components/interface-design/interface-design.component.scss
@@ -10,6 +10,7 @@
     background-color: #f7f5f0;
     h1{
         font-size: 56px;
+        font-weight: 100;
         color: #3B3B3B;
         font-family: "Muli", sans-serif;
     }
@@ -104,6 +105,7 @@
     padding: 150px 0px;
     h3{
         font-size: 36px;
+        font-weight: 100;
         margin-bottom: 30px;
         font-family: "Muli", sans-serif;
     }
@@ -366,6 +368,7 @@
        background-color: #EBEBEB;
        h2{
            font-size: 57px;
+           font-weight: 100;
            font-family: "Muli", sans-serif;
            color: #282829;
            margin-top: 120px;
@@ -375,6 +378,7 @@
         padding: 100px 40px 80px 30px;
         h2{
             font-size: 30px;
+            font-weight: 100;
             margin-top: 80px;
             margin-bottom: 40px;
         }
@@ -395,6 +399,7 @@
            }
            h3{
                font-size: 36px;
+               font-weight: 100;
                font-family: "Muli", sans-serif;
                margin: 40px 130px 20px 40px;
                a{
