--- a/src/app/modules/services/components/ui-development/ui-development.component.scss
+++ b/src/app/modules/services/components/ui-development/ui-development.component.scss
@@ -10,6 +10,7 @@
     background-color: #f7f5f0;
     h1{
         font-size: 56px;
+        font-weight: 100;
         color: #3B3B3B;
         font-family: "Muli", sans-serif;
     }
@@ -66,7 +67,7 @@
         margin-right: 0px !important;
     }
     .left-layout{
-       background-color: #C3343C;
+       background-color: #000000;
        color: #FFFFFF;
        padding: 250px 0px 190px;
        h3{
@@ -107,6 +108,7 @@
     padding: 150px 0px;
     h3{
         font-size: 36px;
+        font-weight: 100;
         margin-bottom: 30px;
         font-family: "Muli", sans-serif;
     }
@@ -394,6 +396,7 @@
        background-color: #EBEBEB;
        h2{
            font-size: 57px;
+           font-weight: 100;
            font-family: "Muli", sans-serif;
            color: #282829;
            margin-top: 120px;
@@ -423,6 +426,7 @@
            }
            h3{
                font-size: 36px;
+               font-weight: 100;
                font-family: "Muli", sans-serif;
                margin: 40px 130px 20px 40px;
                a{
