--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -14,6 +14,7 @@
     .contact-layout{
     h1{
         font-size: 76px;
+        font-weight: 100;
         color: #3B3B3B;
         font-family: "Muli", sans-serif;
         span{
@@ -22,6 +23,7 @@
     }
     h6{ 
         font-size: 26px;
+        font-weight: 100;
         padding-top: 25px;
         color: #3B3B3B;
         font-family: "Muli", sans-serif;
@@ -42,9 +44,11 @@
     .contact-layout{
         h1{
             font-size: 36px;
+            font-weight: 100;
         }
         h6{
             font-size: 24px;
+            font-weight: 100;
         }
     }
     .only-web{
@@ -70,6 +74,7 @@
   .layouts{
     h2{
         font-size: 36px;
+        font-weight: 100;
         color: #000000;
         font-family: "Muli", sans-serif;
     }
@@ -89,6 +94,7 @@
     color: #0D0D0D;
     cursor: pointer;
     font-size: 20px;
+    font-weight: 100;
     padding: 5px 20px;
     font-family: "Muli", sans-serif;
     &:hover{
@@ -100,6 +106,7 @@
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
     background-color: #F5E69D !important;
     font-size: 36px;
+    font-weight: 100;
     font-weight: 500;
     padding: 120px 100px;
     border-radius: 0;
@@ -107,6 +114,7 @@
 .nav-pills a{
     color: #FFF;
     font-size: 36px;
+    font-weight: 100;
     padding: 120px 100px;
     background-color: #282829;
     border-radius: 0;
@@ -138,6 +146,7 @@
         .form-control-file{
             border: none;
             font-size: 20px;
+            font-weight: 100;
            background-color: #f8f9fa;
             padding-left: 5px;
             transition: none !important;
@@ -187,6 +196,7 @@
         }
         h2{
             font-size: 24px;
+            font-weight: 100;
             padding-left: 0%;
         }
         .layout-right{
@@ -226,6 +236,7 @@
         padding: 100px 80px;
         h3{
             font-size: 28px;
+            font-weight: 100;
             color: #3B3B3B;
             line-height: 48px;
             font-family: "Muli", sans-serif;
@@ -239,6 +250,7 @@
         }
         h4{
             font-size: 18px;
+            font-weight: 100;
             color: #3B3B3B;
             margin-top: 40px;
             font-family: "Muli", sans-serif;
@@ -261,6 +273,7 @@
             padding: 40px 60px;
             h3{
                 font-size: 24px;
+                font-weight: 100;
                 line-height: 48px;
             }
             p{
@@ -269,6 +282,7 @@
             }
             h4{
                 font-size: 20px;
+                font-weight: 100;
                 margin-top: 30px;
             }
         }
@@ -288,6 +302,7 @@
     .layout-left{
 h3{
     font-size: 28px;
+    font-weight: 100;
     color: #3B3B3B;
    padding-bottom: 20px;
    font-family: "Muli", sans-serif;
@@ -306,6 +321,7 @@ p{
         padding: 70px 50px;
         h3{
             font-size: 24px;
+            font-weight: 100;
             margin-bottom: 20px;
         }
         p{
